--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Lucas Liaño",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.4.1"
+    "discord.js": "^12.4.1",
+    "dotenv": "^8.2.0"
   }
 }
